Fix Froala <hr> from adding page-breaks in PDF render

--- a/frontend/public/assets/bundle.css
+++ b/frontend/public/assets/bundle.css
@@ -794,26 +794,6 @@ input::-moz-focus-inner {
   }
 }
 
-table.tbl-insight-recommendation td {
-  border: 3px solid #ffffff!important;
-  padding: 3px 10px;
-  color: #FFFFFF;
-  font-family: 'Archer Medium', serif;
-}
-
-table.tbl-insight-recommendation tr td:first-child {
-  background: rgb(63, 124, 192);
-}
-
-table.tbl-insight-recommendation tr td:last-child {
-  background: rgba(63, 124, 192, 0.75);
-}
-
-table.tbl-insight-recommendation tr:first-child td {
-  font-size: 20px;
-  text-align: center;
-}
-
 [class^=icon_channel_] {
   position: relative;
   display: inline-block;
@@ -4219,7 +4199,30 @@ body.prevent-scroll.fr-mobile {
   display: none;
 }
 
+.tbl-insight-recommendation td {
+  border: 3px solid #ffffff!important;
+  padding: 3px 10px;
+  color: #FFFFFF;
+  font-family: 'Archer Medium', serif;
+}
 
+.tbl-insight-recommendation tr td:first-child {
+  background: rgb(63, 124, 192);
+}
+
+.tbl-insight-recommendation tr td:last-child {
+  background: rgba(63, 124, 192, 0.75);
+}
+
+.tbl-insight-recommendation tr:first-child td {
+  font-size: 20px;
+  text-align: center;
+}
+
+.fr-view hr {
+  page-break-before: initial !important;
+  page-break-after: initial !important;
+}
 
 /*
   1. Ensure consistent defaults
